# supaa

./: Cargo.toml  README.md
assets/: hypr-supaa.conf  hypr-supaa.lua  supaa.service
scripts/: emergency-restore.sh  install.sh  uninstall.sh
supaa-cli/: Cargo.toml
supaa-cli/src/: main.rs
supaa-core/: Cargo.toml
supaa-core/src/: lib.rs  modes.rs  protocol.rs  state.rs
supaa-ui/: Cargo.toml
supaa-ui/src/: main.rs
supaad/: Cargo.toml
supaad/src/: cgroup.rs  daemon.rs  freezer.rs  hyprland.rs  main.rs  policy.rs  recovery.rs  whitelist.rs
